--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url('./Assets/wallpaper.jpg');
+    background-image: url('./Assets/blue-sky-clouds.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
